<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_category"
        android:title="@string/text_spinner_category"
        app:actionViewClass="android.widget.Spinner"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_filter"
        android:orderInCategory="100"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/text_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/filter_by_title"
                android:orderInCategory="100"
                android:title="@string/text_title" />
            <item
                android:id="@+id/filter_by_created"
                android:orderInCategory="100"
                android:title="@string/text_date_created" />
            <item
                android:id="@+id/filter_by_updated"
                android:orderInCategory="100"
                android:title="@string/text_date_updated" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_setting"
        android:title="@string/text_setting"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/text_about"/>

</menu>