<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/item_note_list_margin_top"
    android:layout_marginBottom="@dimen/item_note_list_margin_bottom"
    android:layout_marginStart="@dimen/item_note_list_margin_start"
    android:layout_marginEnd="@dimen/item_note_list_margin_end"
    android:layout_marginLeft="@dimen/item_note_list_margin_start"
    android:layout_marginRight="@dimen/item_note_list_margin_end">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_card_list_height">
        <LinearLayout
            android:layout_width="@dimen/item_note_list_layout_width"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"
            android:id="@+id/noteCategory"
            android:orientation="vertical" />
        <RelativeLayout
            android:id="@+id/itemListClick"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:layout_marginStart="@dimen/item_note_list_margin_start"
            android:layout_marginLeft="@dimen/item_note_list_margin_start">
            <RelativeLayout
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_note_list_margin_start"
                android:layout_marginLeft="@dimen/item_note_list_margin_start"
                android:layout_toLeftOf="@+id/lockStatus"
                android:layout_toStartOf="@+id/lockStatus">
                <TextView
                    android:id="@+id/notesTitle"
                    android:textSize="@dimen/item_note_list_text_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_title"/>
                <TextView
                    android:id="@+id/noteUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notesTitle"
                    android:hint="@string/text_updated"/>
            </RelativeLayout>
            <ImageView
                android:id="@+id/lockStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:visibility="invisible"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/item_note_list_margin_end"
                android:layout_marginRight="@dimen/item_note_list_margin_end"
                android:contentDescription="@string/desc_image"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>